fixed profile image scaling issue on narrow displays such as phones.

--- a/src/Components/Profile.scss
+++ b/src/Components/Profile.scss
@@ -2,6 +2,11 @@
     flex: 1;
 }
 
+img {
+    flex: 0;
+    object-fit: contain;
+}
+
 .profileContainer {
     display: flex;
     text-align: left;
